# OrkhestraFPGAStream

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  DBMStoDSPI.sln  LICENSE  README.md  TODO.txt  benchmark.pl  benchmark.sh  main.cpp  run_clang_tidy_on_project.sh  setup.cpp  tidy-checks.sh
EasyDSPI/: CMakeLists.txt  README.md  main.cpp
EasyDSPI/apps/: CMakeLists.txt  main.cpp
EasyDSPI/resources/: DSPI_addition.json  config.ini  expected_reversed_table.csv  extended_accelerator_set.json  filter_testing.json  first_input_table.csv  input_def.json  module_drivers.json  repo.json  required_memory_space.json  supported_accelerators.json
EasyDSPI/resources/benchmark/: TPCH_Q6_SF001.json  benchmark_Q19_SF001.json  benchmark_Q19_SF1.json  fast_benchmark_config.ini
EasyDSPI/resources/data/: CAR_DATA_HALF_SORTED_8K_512WAY.csv  CAR_DATA_HALF_SORTED_8K_64WAY.csv  CAR_DATA_SORTED.csv  CAR_DATA_SORTED_8K.csv  CUSTOMER_DATA.csv  lineitem_part_sf0_01_2nd_filter.csv  lineitem_part_sf0_01_multiplied.csv  lineitem_part_sf0_1_2nd_filter.csv  lineitem_part_sf0_1_inverted.csv  lineitem_sf0_01_filter.csv  lineitem_sf0_1_filter.csv  lineitem_sf0_1_sort_triple.csv  part_sf0_1.csv  part_sf0_1_filter.csv
EasyDSPI/resources/hardware/: DSPI_merge_sorting.json
EasyDSPI/resources/input_defs/: TPCH_Q19_SF001.json  TPCH_Q19_SF01.json
EasyDSPI/src/core/: CMakeLists.txt  core.cpp  core.hpp
EasyDSPI/src/core_interfaces/: CMakeLists.txt  config.hpp  execution_manager_interface.hpp  execution_plan_graph_interface.hpp  execution_plan_node.hpp  input_manager_interface.hpp  operation_types.hpp  output_manager_interface.hpp  query_scheduling_data.hpp  table_data.hpp
EasyDSPI/src/dbmstodspi/: CMakeLists.txt  graph.cpp  graph.hpp  graph_creator.hpp  graph_processing_fsm_interface.hpp  json_validator_interface.hpp  read_state.hpp  state_interface.hpp
EasyDSPI/src/fos/: CMakeLists.txt
EasyDSPI/tests/: CMakeLists.txt  dma_crossbar_setup_test.cpp  dma_crossbar_specifier_test.cpp  dma_setup_test.cpp  filter_setup_test.cpp  id_manager_test.cpp  mock_acceleration_module.cpp  mock_acceleration_module.hpp  mock_dma.hpp  mock_filter.hpp  mock_memory_manager.hpp  node_scheduler_test.cpp  types_converter_test.cpp
apps/: CMakeLists.txt  baremetal_filtering.c  baremetal_joining.c  first_run.cpp  fpga_run.cpp  main.c  main.cpp  read_write_test.cpp
src/core/core_execution/: CMakeLists.txt  execution_manager.cpp  execution_manager.hpp  execution_manager_factory.cpp  execution_manager_factory.hpp
src/core/core_input/: CMakeLists.txt  config_creator.cpp  config_creator.hpp  input_manager.cpp  input_manager.hpp  input_manager_factory.cpp  input_manager_factory.hpp
src/core_interfaces/: CMakeLists.txt  config.hpp  execution_manager_interface.hpp  execution_plan_graph_interface.hpp  input_manager_interface.hpp  json_reader_interface.hpp  memory_block_interface.hpp  operation_types.hpp  pr_module_data.hpp  query_scheduling_data.hpp  table_data.hpp
src/data_managing/: CMakeLists.txt  config_reader.cpp  config_reader.hpp  csv_reader.cpp  csv_reader.hpp  data_manager.cpp  data_manager.hpp  table_data.hpp  types_converter.cpp  types_converter.hpp
src/dbmstodspi/input_handling/: CMakeLists.txt  config_value_checker_interface.hpp  graph.cpp  graph.hpp  graph_creator.cpp  graph_creator.hpp  graph_creator_interface.hpp  input_config_reader.cpp  input_config_reader.hpp  input_config_reader_interface.hpp  json_reader_interface.hpp  json_validator_interface.hpp  rapidjson_reader.cpp  rapidjson_reader.hpp
src/dbmstodspi/query_execution/: CMakeLists.txt  graph_processing_fsm_interface.hpp  query_acceleration_constants.hpp
src/fpga_managing/: CMakeLists.txt  accelerated_query_node.hpp  acceleration_module.cpp  acceleration_module.hpp  addition_setup.cpp  addition_setup.hpp  aggregation_sum_setup.cpp  aggregation_sum_setup.hpp  dma.cpp  dma.hpp  dma_crossbar_setup.cpp  dma_crossbar_setup.hpp  dma_crossbar_setup_data.hpp  dma_crossbar_specifier.cpp  dma_crossbar_specifier.hpp  dma_interface.hpp  dma_multi_channel_setup_data.hpp  dma_setup.cpp  dma_setup.hpp  dma_setup_data.hpp  filter.cpp  filter.hpp  filter_config_values.hpp  filter_interface.hpp  filter_setup.cpp  filter_setup.hpp  fpga_manager.cpp  fpga_manager.hpp  ila.cpp  ila.hpp  ila_types.hpp  join.cpp  join.hpp  join_interface.hpp  join_setup.cpp  join_setup.hpp  linear_sort.cpp  linear_sort.hpp  linear_sort_interface.hpp  linear_sort_setup.cpp  (+26 more)
src/fpga_managing/modules/: acceleration_module.cpp  acceleration_module.hpp  addition.cpp  addition.hpp  addition_interface.hpp  dma.cpp  (+21 more)
src/input_managing/: CMakeLists.txt  config.hpp  config_creator.cpp  config_creator.hpp  graph_creator.cpp  graph_creator.hpp  input_config_reader.cpp  input_config_reader.hpp  input_config_reader_interface.hpp  json_reader_interface.hpp  rapidjson_reader.cpp  rapidjson_reader.hpp
src/query_managing/: CMakeLists.txt  elastic_module_checker.cpp  elastic_module_checker.hpp  id_manager.cpp  id_manager.hpp  node_scheduler.cpp  node_scheduler.hpp  query_manager.cpp  query_manager.hpp  query_node.hpp  query_scheduling_data.hpp  table_manager.cpp  table_manager.hpp
src/sql_parsing/: CMakeLists.txt  q19_creator.cpp  q19_creator.hpp  sql_json_reader.cpp  sql_json_reader.hpp  sql_json_writer.cpp  sql_json_writer.hpp  sql_parser.cpp  sql_parser.hpp  sql_query_creator.cpp  sql_query_creator.hpp  sql_query_data.hpp
src/util/: CMakeLists.txt  logger.hpp  orkhestra_exception.hpp  util.hpp
tests/: AccelerationModuleMock.cpp  AccelerationModuleMock.hpp  AccelerationModuleTest.cpp  CMakeLists.txt  DMACrossbarSetupTest.cpp  DMASetupTest.cpp  FilterSetupTest.cpp  MockAccelerationModule.cpp  MockAccelerationModule.hpp  MockDMA.hpp  MockFilter.hpp  acceleration_module_test.cpp  dma_crossbar_setup_test.cpp  dma_crossbar_specifier_test.cpp  dma_setup_test.cpp  filter_setup_test.cpp  id_manager_test.cpp  mock_acceleration_module.cpp  mock_acceleration_module.hpp  mock_dma.hpp  mock_filter.hpp  mock_memory_manager.hpp  node_scheduler_test.cpp  testing_test.cpp  types_converter_test.cpp
(+791 files in other folders)
